     data radio bearers (with their QoS parameters), the MAC queues and 
     the RLC instances, (v) Channel Quality Indicator (CQI) management, 
     (vi) support for both uplink and downlik packet scheduling, 
     (vii) a PHY layer model with Resource Block level granularity, and 
     (viii) a channel model with the outdoor E-UTRAN propagation loss 
     model.

Bugs fixed
----------
The following lists many of the bugs fixed or small feature additions
since ns-3.9, in many cases referencing the Bugzilla bug number

   - bug 824 - TCP should implement FastRecovery by default
   - bug 852 - Add support for 802.11g devices
   - bug 892 - WaypointMobilityModel incompatible with MobilityHelper::Install
   - bug 893 - Lazy CourseChange notification for WaypointMobilityModel
   - bug 903 - TapBridge does not shut down properly
   - bug 953 - WiMAX channel scanning overflow
   - bug 967 - Need to decouple Ipv4L4Protocols from Ipv4L3Protocol
   - bug 978 - Consolidate Wi-Fi MAC high functionality
   - bug 979 - Multi-octet fields in Wi-Fi headers have wrong endianness
   - bug 981 - use a cache to keep track of received MPDUs under block ack
   - bug 983 - handle correctly ADDBA response action frames in QadhocWifiMac
   - bug 984 - EmuNetDevice should use DIX encapsulation by default
   - bug 985 - WiMAX Invalid management message type on wimax-simple
   - bug 988 - MacRxMiddle::SequenceControlSmaller method
   - bug 990 - Error with an NS_ASSERT at uan-phy-gen.cc
   - bug 991 - InterferenceHelper assertion failure
   - bug 992 - Unusual (possibly incorrect assertion) in Packet::Deserialize
   - bug 993 - MinstrelWifiManager::UpdateStats useless if clause
   - bug 994 - PointToPointGridHelper useless if clauses
   - bug 995 - Useless (possibly incorrect) comparison of unsigned int
   - bug 1004 - module header not rebuilt
   - bug 1005 - GetSocket() methods for OnOffApplication and PacketSink